fix: pack.gz runtime + add plain/pack.gz/gzip matrix integration test
pack.gz was silently broken: the uber jar was built from the GitHub-Packages
io.pack200:pack200:11.0.2 jar, which lacks io/pack200/pack/intrinsic.properties
-> UnpackerImpl throws at runtime (TLGlobals init) on servers that only serve
.pack.gz. Verified against the working production release jar (917 KB, has the
resource) and confirmed io.pack200's PACKER is broken (only JDK 11's built-in
Pack200 can pack), so unpack-only is what ITW needs.

- ensure-pack200-maven.sh: prefer GitHub Packages (maven.pkg.github.com via
  MAVEN_SETTINGS), verify intrinsic.properties, fall back to the working
  GitHub release jar; always verifies before installing.
- icedtea-web/pom.xml: validate-phase fail-fast if the resolved pack200 jar
  lacks intrinsic.properties, so a broken artifact can never silently ship
  again.
- itw-multijar-it: rewritten. No uber dependency (resolves on any runner).
  Two launch modes: -Ditw.uber.jar (source tree) or -Ditw.javaws.bin
  (installed MSI/zip). Matrix test serves 20 x ~20 MB jars over Undertow:
  8 plain, 6 pack.gz-only (only the .pack.gz URL exists - the 'servers with
  only pack gz' case), 6 with Content-Encoding gzip. App must load a class
  from every jar; asserts .pack.gz fetches happened and 20 resources cached.
  .pack.gz fixtures built with JDK 11 java.util.jar.Pack200 (skipped on
  JDK 14+).
- integration.yml: multijar job passes -Ditw.uber.jar; windows-package-smoke:
  JDK 11 + runs the matrix IT against the installed MSI launcher.